--- a/n-chains/n-chains-client/src/main/css/style.css
+++ b/n-chains/n-chains-client/src/main/css/style.css
@@ -1,6 +1,7 @@
+body {
+	background-color: #000000;
+}
+
 .console {
-	background-color: #cccccc;
-	border: 1px solid #000000;
-	width: 100%;
-	height: 90%;
+	color: white;
 }
